# vector-similarity-search

./: .clang-format  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESULTS.md  benchmark.sh  mkdocs.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-cpp.yml  ci.yml  test-python.yml
algorithms/lsh-hypercube-ivf/: Makefile
algorithms/lsh-hypercube-ivf/include/: data_types.hpp  hypercube.hpp
algorithms/neural_lsh/: .gitignore  README.md  brute_force.py  distance_utils.py  ground_truth_cache.py  metrics.py  nlsh_build.py  nlsh_build_and_search.py  nlsh_build_args.py  nlsh_search.py  nlsh_search_args.py  output_writer.py  parse_mnist.py  parse_sift.py  plot_results_neural.py  requirements.txt  results.py
cpp-ann-algorithms/: .gitignore  Makefile  README.md
cpp-ann-algorithms/include/: brute_force.hpp  data_types.hpp  file_io.hpp  ivfflat.hpp
cpp-ann-algorithms/scripts/: download_mnist.sh
cpp-ann-algorithms/src/: arg_parse.cpp  hypercube.cpp  main.cpp
docs/: ARCHITECTURE.md  DATASETS.md  FILE_FORMATS.md  PARAMETERS.md  README.md  REPRODUCIBILITY.md  _config.yml  index.md
docs/api/: index.md
docs/images/: README.md
examples/: README.md  neural_lsh_mnist_example.sh  protein_search_example.sh
include/: arg_parse.hpp  brute_force.hpp  data_types.hpp  file_io.hpp  hypercube.hpp  ivfflat.hpp  ivfpq.hpp  lsh.hpp  utils.hpp
neural-lsh/: README.md  brute_force.py  metrics.py  model.py  nlsh_build.py  nlsh_search.py  output_writer.py  plot_results.py  pyproject.toml
neural_lsh/: __init__.py  ground_truth_cache.py  parsers.py  results.py  run_experiments.sh
protein-similarity-search/: README.md  __init__.py  plot_results.py  protein_embed.py  protein_embed_backend.py  pyproject.toml  setup.sh
protein_similarity_search/: protein_search.py  results.txt  run_pipeline.sh
scripts/: download_sift.sh  plot_results.py
src/: arg_parse.cpp  benchmark.cpp  brute_force.cpp  file_io.cpp  hypercube.cpp  ivfflat.cpp  ivfpq.cpp  lsh.cpp  main.cpp  utils.cpp
test_framework-protein_folding/: README.md  links_for_setup.md  protein_embed.py  protein_embed_backend.py  protein_search.py  requirements.txt  results.txt  run_pipeline.sh  setup.sh
test_framework-protein_folding/output/: results.txt
(+16 files in other folders)
