[project]
name = "neural_lsh"
version = "1.0.0"
description = "Neural Locality-Sensitive Hashing for Approximate Nearest Neighbor Search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Egor-Andrianos Tsekrekos" },
    { name = "Theodoros Dimakopoulos" },
]
keywords = ["ann", "nearest-neighbor", "lsh", "neural-network", "graph-partitioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "kahip>=3.16",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.12",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
nlsh-build = "nlsh_build:main"
nlsh-search = "nlsh_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "*.py",
    "py.typed",
]
