[project]
name = "protein_similarity_search"
version = "1.0.0"
description = "Protein similarity search using ESM-2 embeddings and ANN algorithms, benchmarked against BLAST"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Egor-Andrianos Tsekrekos" },
    { name = "Theodoros Dimakopoulos" },
]
keywords = ["protein", "bioinformatics", "esm-2", "blast", "ann", "similarity-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "biopython>=1.80",
    "numpy>=1.24",
    "kahip>=3.16",
    "scikit-learn>=1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
protein-embed = "protein_embed:main"
protein-search = "protein_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["."]
